Fix: removed dead code